# asvt_sem7_kursach

./: .gitattributes  .gitignore  ClassMap.drawio  readme.md  roadmap.md
.github/workflows/: dotnet.yml
Executor/: Command.cs  Executor.cs  Page.cs  State.cs  Trap.cs
class-map/: roadmap.md
class_map/: Assembler.drawio  Executor.drawio
demo/addressing/: addressing.pdp11proj  main.asm  readme.md
demo/auto/: auto.pdp11proj  main.asm  readme.md
demo/device/: device.pdp11proj  main.asm  readme.md
demo/hardtrap/: main.asm  readme.md
demo/simple/: main.asm  readme.md
demo/softtrap/: main.asm  readme.md
demo/tracetrap/: main.asm  readme.md
docs/: .~lock.Описание применения.odt#  readme.md  ИУ8-71. ИЗ. Тимощук. Штырков.odt  ИУ8-71. ИЗ. Шаповалов.odt  ИУ8-71. ТЗ. Тимощук. Штырков.odt  ИУ8-71. ТЗ. Шаповалов.odt  Описание применения.odt  Описание программы.odt  Пояснительная записка - внешние устройства.odt  Пояснительная записка - симулятор.odt  Презентация.odp  Программа и методика испытаний.odt  Руководство оператора.odt  Руководство программиста.odt  Спецификация.odt  ТЗ 1.odt  ТЗ 2.odt  Текст программы.odt  лист ИЗ 1.odt  лист ИЗ 2.odt
docs/Блок-схемы/: algorithms.drawio  struct.drawio
examples/: readme.md
examples/ShareLibUsageExample/TestCppSharedLib/: CMakeLists.txt  CoolStringBuilder.cpp  CoolStringBuilder.h  CoolStringBuilder.hpp  CoolStringBuilderExtern.cpp  CoolStringBuilderExtern.h
scripts/: publish-demo-devices-to-tests.ps1  publish-sdk.ps1
sdk/: PDP-11 External Devices SDK.sln
sdk/ROM/: Function.cs  (+2 more)
src/: Makefile  PDP-11-Simulator.sln
(+560 files in other folders)
